# libs

./: .gitignore  README.md
cmake/: README.md
cmake/cmake/: CMakeLists.txt.bin.txt  CMakeLists.txt.binlib.txt  common-build-env.cmake  fh-toolchain.cmake  vatics-m3c-toolchain.cmake
crypto/: CMakeLists.txt  README.md  base64.c  base64.h  des.c  des.h  desb_crypt.c  desb_crypt.h  test_desb.c
demos/: README.md
demos/crypto/: README.md  base64.h  des.h  desb_crypt.c  desb_crypt.h  test_base64.c  test_des.c  test_desb.c
demos/libcmd/: Makefile  README.md  libcmd.c  libcmd.h  libmsgq.h  list.h  test_libcmd  test_libcmd.c  test_libcmdc.c  test_libcmds.c  v-ls
demos/libfatfs/: Makefile  README.md  diskio.c  ffconf.h  test_libfatfs.c
demos/libfont/: Makefile  README.md  en_6_12_9.hzk  en_8_16_12.hzk  hz_12_12_9.hzk  hz_16_16_12.hzk  hzk_font.c  hzk_font.h  test_hzk_font.c
demos/liblog/: Makefile  liblog.c  test_liblog.c
demos/libmsgq/: Makefile  README.md  libmsgq.c  libmsgq.h  test_libmsgqc  test_libmsgqc.c  test_libmsgqs  test_libmsgqs.c
demos/libringbuf/: Makefile  README.md  ringbuf.c  ringbuf.h  test_ringbuf.c
demos/libsjt/: Makefile  README.md  sjt.c  sjt.h  test1.json  test2.json  test_sjt.c  test_sjt.h
demos/libsxt/: Makefile  Makefile.RO  README.md  hxml.c  hxml.h  sxt.c  sxt.h  test1.xml  test2.xml  test_sxt.c  test_sxt_ro.c  xml_node.c  xml_node.h
demos/libtwtimer/: Makefile  README.md  test_twtimer.c  twtimer.c  twtimer.h
demos/libuvc/: Makefile  README.md  libuvc.c  libuvc.h  test_libuvc.c  test_uvc_cap.c  test_uvc_output.c  usb_gadget.sh  usb_video.h  uvc_gadget.c  uvc_gadget.h  uvc_video.c  uvc_video.h
demos/pthread_pool/: Makefile  README.md  pthread_pool.c  pthread_pool.h  test_pthread_pool.c
demos/rt_graph/elliot.js/: README.md  demo.html  rtgraph.html
demos/rtsp/longse-rtsps/librtsp/: CMakeLists.txt  Makefile  fifoutil.h  g711.c  g711.h  linux_list.h  md5.c  md5.h  rs_misc.c  rs_misc.h  rs_rtp.c  rs_rtp.h  rs_rtsp.c  rs_rtsp.h  rs_rtsp_base64.c  rs_rtsp_base64.h  rs_rtsp_common.h  rs_type.h  rtcp.h  rtspsrv.c  rtspsrv.h
demos/unit_test/: CMakeLists.txt  Makefile  README.md  getopts.c  ringbuf.c  ringbuf.h  test_mdio.c  test_ttyS0.c
demos/unit_test/cmake/: common-build-env.cmake  hisi-toolchain.cmake
ffdemo/: README.md
ffdemo/demo/: CMakeLists.txt  transcoding.c
ffdemo/demo/libffmpeg/: uname.txt
ffdemo/scripts/: build-ffmpeg.sh  build-x264.sh
gitconfig/: README.md
kermod/: README.md
kermod/gpioconfig/: Makefile  README.md  gpioconfig.c  gpioconfig.h  iotest  iotest.c
kermod/lens/: lensDrv.h  test.c
kermod/lens-gpio/: Makefile  README.md  lensDrv.c  lensTimer.c  lensTimer.h
kermod/lens-ms41908/: Makefile  lensDrv.c  lensDrv.h  lensGpio.h  lensMs41908.c  lensMs41908.h  lensProc.c  lensProc.h  lensTimer.c  lensTimer.h  test.c
kermod/timer/: Makefile  README.md  test_timer.c  utimer.c  utimer.h
memtester/: build-memtester.sh
modules/: README.md
modules/SDL/: README.md  build-SDL.sh  build-SDL_ttf.sh  build-freetype.sh
modules/SDL/test/: CMakeLists.txt  make.sh  ttf_osd_text.c  ttf_osd_text.h  ttf_test.c
modules/SDL/test/ext/sdl/include/: SDL_config.h
modules/SDL/test/ttf_osd_text/: CMakeLists.txt  ttf_osd_text.c  ttf_osd_text.h
modules/boa/: README.md  build-boa.sh
modules/ffmpeg/: README.md
modules/ffmpeg/demo/: CMakeLists.txt  README.md  audio_transcode.c  audio_transcode.h  media_demux.c  media_demux.h  media_mux.c  media_mux.h  test_media_demux.c  test_media_mux.c  transcoding.c
modules/ffmpeg/demo/libffmpeg/: uname.txt
modules/ffmpeg/demo/libffmpeg/examples/: a.out
modules/ffmpeg/demo/librecord/: CMakeLists.txt  make.sh  record_files_mng.c  record_files_mng.h  test_record.c
modules/jpeg/: README.md  build-jpeg.sh
modules/opencv/: README.md  build-opencv.sh
modules/openssl/: README.md  build-openssl.sh
modules/python/: README.md  build-python.sh
modules/qrcode/: README.md  build-all.sh  build-imagemagick.sh  build-zbar.sh
qrcode/: build-iconv.sh  build-imagemagick.sh  build-libiconv.sh  build-zbar.sh
qrcode/demo/: CMakeLists.txt
qrcode/demo/extlib/include/magick/: version.h
qrcode/demo/extlib/lib/: libMagickWand-6.Q16.so.4.0.0
scripts/: README.md  test_cpu.sh  unjffs2.sh
strace/: README.md  build-strace.sh
sunitest/: CMakeLists.txt  README.md  getopts.sh  test_ttyS0.c
sunitest/cmake/: fh-toolchain.cmake
tcpping/: Makefile  README.md  tcpping.c
tools/: README.md
tools/cmake/: common-build-env.cmake  make.sh  test_main.c
tools/dosfstools/: README.md  build-dosfstools.sh
tools/elfio/: README.md  build-elfio.sh
tools/env_profile/: env_profile
tools/ethtool/: README.md  build-ethtool.sh
tools/fw_setenv/: Makefile  README  aes.c  crc32.c  fw_env.c  fw_env.config  fw_env.h  fw_env_main.c  uboot_aes.h
tools/gdb/: README.md  build-gdb.sh  build-ncurses.sh
tools/gitconfig/: README.md  gitconfig
tools/iconv/: README.md  build-iconv.sh
tools/iperf/: README.md  build-iperf.sh  build-iperf3.sh
tools/iptables/: README.md  build-iptables.sh
tools/libsparse/: Makefile  README.md
tools/mdio-tool/: Makefile  mdio-tool.c
tools/memtester/: README.md  build-memtester.sh
tools/nginx/: README.md  build-nginx.sh  build-openssl.sh  build-pcre.sh
tools/nmon/: Makefile  README.md  build-ncurses.sh  build-nmon.sh
tools/phytool/: Makefile
tools/procps/: README.md  build-ncurses.sh  build-procps.sh
tools/stress-ng/: README.md  build-stress-ng.sh
tools/stunnel/: README.md  build-openssl.sh  build-stunnel.sh
tools/sysbench/: README.md  build-sysbench.sh
tools/taskset/: Makefile  README.md  taskset.c
tools/tcpdump/: README.md  build-libpcap.sh  build-tcpdump.sh
tools/tcpping/: Makefile  README.md  orig_tcpping.c  tcpping.c
tools/telnet/: mt.h
tools/tiny-httpd/: Makefile  README.md  httpd.c  index.html
tools/tinyproxy/: README.md  build-tinyproxy.sh
tools/udhcp/: README.md  build-udhcp.sh
tools/util-linux/: README.md  build-util-linux.sh
tools/zlib/: README.md  build-zlib.sh
valgrind/: README.md  build-valgrind.sh
(+117 files in other folders)
