##
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)


# 头文件路径添加
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
# 库路径添加
LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})


# test_ttyS0.c
SET(TARGET_NAME "test_ttyS0")
SET(BIN_SRC_LIST ${TARGET_NAME}.c)
ADD_EXECUTABLE(${TARGET_NAME} ${BIN_SRC_LIST})

# getopts.c
SET(TARGET_NAME "getopts")
SET(BIN_SRC_LIST ${TARGET_NAME}.c)
ADD_EXECUTABLE(${TARGET_NAME} ${BIN_SRC_LIST})

