
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
# 目标名
SET(TARGET_NAME "rtspsrv")

# 头文件路径添加
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

# 库路径添加
LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/lib)

# 源码文件列表添加
AUX_SOURCE_DIRECTORY(. SRC_LIST)
#SET(SRC_LIST mime.c  rtp.c  rtsp.c)

# 库生成 [STATIC|SHARED]
IF (BUILD_SHARED_LIBS)
	ADD_LIBRARY(${TARGET_NAME} SHARED ${SRC_LIST})
ELSE (BUILD_SHARED_LIBS)
	ADD_LIBRARY(${TARGET_NAME} STATIC ${SRC_LIST})
ENDIF (BUILD_SHARED_LIBS)

# install (make install时执行)
#install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/rtsp_server.h" DESTINATION "${COMMON_OUTPUT_PATH}/inc")

# copy (cmake时候执行)
file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/${TARGET_NAME}.h" DESTINATION  "${COMMON_OUTPUT_PATH}/inc" )
